--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Primality</title>
+  <title>Primality Checker</title>
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="styles.css" type="text/css">
@@ -15,7 +15,15 @@
 </head>
 
 <body>
-
+  <h1 class='heading'>Primality Checker</h1>
+  <div class="everything">
+    <div class="row inside">
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 column">
+        <textarea class="textInput"></textarea>
+        <button class='submit'>Check Primality!</button>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
