--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 column">
         <textarea class="textInput"></textarea>
         <button class='submit'>Check Primality!</button>
+        <div class="output">
+          <h1 class='primeOrNot'></h1>
+          <div id="myProgress">
+            <div id="myBar">0%</div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
